# MultiagentCompetitiveAnalysisTool

./: .gitignore  README.md  ROADMAP.md  requirements.txt
Backend/: pyproject.toml  requirements.txt
Backend/config/: prompts.py  settings.py
Backend/src/: api.py
Backend/src/graph/: graph_builder.py  state.py
Backend/src/graph/nodes/: planner.py  researcher.py  validator.py
Backend/src/rag/: chunker.py  vector_store.py
Backend/src/tools/: llm.py  scraper.py
Backend/src/utils/: logger.py  text.py
Backend/tests/: test_graph_builder.py  test_researcher.py  test_scraper.py  test_state.py  test_synthesizer.py  test_text.py  test_validator.py
config/: prompts.py  settings.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  mockData.js
frontend/src/components/: CompanyCard.jsx  Header.jsx  ProgressPanel.jsx  SearchBar.jsx
src/: api.py  main.py
src/graph/nodes/: planner.py  synthesizer.py
src/rag/: chunker.py  vector_store.py
src/tools/: web_search.py
src/utils/: logger.py  text.py
tests/: test_api.py  test_chunker.py  test_llm.py  test_planner.py  test_prompts.py  test_settings.py  test_web_search.py
