[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "competitive-analysis-tool"
version = "0.1.0"
description = "AI-powered competitive analysis research tool using LangGraph, RAG, and web search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/competitive-analysis-tool"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]